--- a/client/judge0/index.html
+++ b/client/judge0/index.html
@@ -5,7 +5,7 @@
     <meta name="referrer" content="no-referrer-when-downgrade" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Judge0</title>
   </head>
   <body>
     <div id="root"></div>
